# emma-schools-assessment-api-driven

./: README.md  pyproject.toml  requirements.txt  school-list.md  source-universe.md
docs/synthesis/: scoring-grid.md
emma_schools/cli/: main.py
emma_schools/config/: __init__.py  dimensions.yml  loaders.py  models.py  schools.yml
emma_schools/core/: paths.py  slugs.py
emma_schools/deep_research/: __init__.py  client.py  prompts.py  search.py
emma_schools/pipelines/: grid.py  raw_facts.py  scoring.py  synthesis.py
logic/: scoring_rules.md
